Add placeholder information

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
     <div class="right">
       <div class="about">
         <h2 class="rightSideTitle">Profile</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula sit amet ligula id varius. Sed auctor
+          posuere enim, ut consequat velit bibendum vel. Nullam cursus, risus sed pulvinar maximus, mi velit vulputate
+          odio, vitae imperdiet neque augue et turpis.<br><br> Sed suscipit, lectus vulputate consequat ullamcorper,
+          mauris
+          felis efficitur erat, ut convallis mauris metus non ante. Aenean porttitor imperdiet odio eu sagittis. </p>
       </div>
 
       <div class="about">
@@ -98,6 +103,7 @@
           </div>
           <div class="text">
             <h4>Fullstack Web Developer</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
         <div class="box">
@@ -107,6 +113,7 @@
           </div>
           <div class="text">
             <h4>Frontend Developer</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
         <div class="box">
@@ -116,6 +123,7 @@
           </div>
           <div class="text">
             <h4>Backend Web Developer</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
       </div>
