Create button to reload page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
         <h2 id="name">Name</h2>
         <span>Web Developer</span>
+        <button onClick="window.location.reload();">Change person</button>
       </div>
 
       <div class="info">
