--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Curriculum Vitae</title>
   <link rel="stylesheet" href="src/css/main.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway">
 </head>
 <body>
 
