Add navegation bar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 </head>
 <body>
 
+  <nav id="navbar" class="nav">
+    <ul class="nav-list">
+      <li>
+        <a href="#welcome-section">About <i class="bi bi-file-person"></i></a>
+      </li>
+      <li>
+        <a href="#projects">Work <i class="bi bi-card-list"></i></a>
+      </li>
+      <li>
+        <a href="#contact">Contact <i class="bi bi-info-circle"></i></a>
+      </li>
+    </ul>
+  </nav>
 
     </div>
 
