--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     </ul>
   </nav>
 
+  <section id="welcome-section" class="welcome-section">
+    <img id="profile-img" src="" alt="profile-photo">
+    <h1 id="profile-name"> </h1>
+    <p><i class="bi bi-code"></i> Web Developer <i class="bi bi-code-slash"></i></p>
+  </section>
     </div>
 
     </div>
