Add information section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,42 @@
     <h1 id="profile-name"> </h1>
     <p><i class="bi bi-code"></i> Web Developer <i class="bi bi-code-slash"></i></p>
   </section>
+
+  <section class="info-section">
+
+    <h3>About me <i class="bi bi-person"></i>:</h3>
+
+    <ul>
+      <li>
+        <span id="location">Location: </span>
+      </li>
+      <li>
+        <span id="gender">Gender: </span>
+      </li>
+      <li>
+        <span id="age">Age: </span>
+      </li>
+      <li>
+        <span id="birthdate">Birthdate: </span>
+      </li>
+    </ul>
+
+    <h3>Contact Info <i class="bi bi-info-lg"></i>:</h3>
+
+    <ul>
+      <li>
+        <span id="cell-number">Cell: </span>
+      </li>
+      <li>
+        <span id="phone-number">Phone: </span>
+      </li>
+      <li>
+        <span id="email">Email: </span>
+      </li>
+    </ul>
+
+  </section>
+
     </div>
 
     </div>
