Add projects section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,53 @@
 
   </section>
 
+  <section id="projects" class="projects-section">
+
+    <h2 class="projects-section-header">These are some of my recent projects <i class="bi bi-braces"></i></h2>
+
+    <div class="projects-grid">
+
+      <a href="https://github.com/AragonEA/Pokedex" target="_blank" class="project project-tile">
+        <img class="project-image" src="src/img/Pokedex.png" alt="pokedex project image" />
+        <p class="project-title">
+          <span class="code">&lt;</span>
+          Pokedex <i class="bi bi-phone-landscape"></i>
+          <span class="code">&#47;&gt;</span>
+        </p>
+      </a>
+
+      <a href="https://github.com/AragonEA/Simon-says" target="_blank" class="project project-tile">
+        <img class="project-image" src="src/img/Simon-says.png" alt="simon-says project image" />
+        <p class="project-title">
+          <span class="code">&lt;</span>
+          Simon says <i class="bi bi-grid"></i>
+          <span class="code">&#47;&gt;</span>
+        </p>
+      </a>
+
+      <a href="https://github.com/AragonEA/Memotest" target="_blank" class="project project-tile">
+        <img class="project-image" src="src/img/Memotest.png" alt="memotest project image" />
+        <p class="project-title">
+          <span class="code">&lt;</span>
+          Memotest <i class="bi bi-ui-checks-grid"></i>
+          <span class="code">&#47;&gt;</span>
+        </p>
+      </a>
+
+      <a href="https://github.com/AragonEA/Etch-a-Sketch" target="_blank" class="project project-tile">
+        <img class="project-image" src="src/img/Etch-a-sketch.png" alt="Etch a sketch project image" />
+        <p class="project-title">
+          <span class="code">&lt;</span>
+          Etch-A-Sketch <i class="bi bi-pencil"></i>
+          <span class="code">&#47;&gt;</span>
+        </p>
+      </a>
+    </div>
+
+    <a href="https://github.com/AragonEA" class="btn btn-show-all" target="_blank">Show all<i class="bi bi-link"></i></a>
+
+  </section>
+
     </div>
 
     </div>
