Add contact section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,28 @@
 
   </section>
 
+  <section id="contact" class="contact-section">
+
+    <div class="contact-section-header">
+      <h2>Contact me!</h2>
     </div>
 
+    <div class="contact-links">
+      <a id="whatsapp-btn" href="" class="btn contact-details">Text me <i class="bi bi-whatsapp"></i></a>
+
+      <a href="https://www.linkedin.com/" class="btn contact-details">LinkedIn <i class="bi bi-linkedin"></i></a>
+
+      <a href="https://github.com/AragonEA" target="_blank" class="btn contact-details">GitHub <i class="bi bi-github"></i></a>
+
+      <a id="phone-btn" href="" class="btn contact-details"><i class="bi bi-telephone-fill"></i>Call me</a>
+    </div>
+
+
+    <a id="mail-btn" href="mailto:example@example.com" class="btn contact-details"><i class="bi bi-envelope-fill"></i>
+      Send a mail</a>
+
+
+  </section>
     </div>
 
   <script src="src/js/main.js"></script>
