--- a/index.html
+++ b/index.html
@@ -135,7 +135,16 @@
 
 
   </section>
+
+  <footer>
+    <div>
+      <a href="https://www.facebook.com/" target="_blank" class="btn footer-btn"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/" target="_blank" class="btn footer-btn"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.twitter.com/" target="_blank" class="btn footer-btn"><i class="bi bi-twitter"></i></a>
+      <a href="https://www.skype.com/" target="_blank" class="btn footer-btn"><i class="bi bi-skype"></i></a>
     </div>
+    <p>&copy; Created for Argentina Programa 4.0 by Aragon Emanuel</p>
+  </footer>
 
   <script src="src/js/main.js"></script>
 </body>
