--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
       <a id="phone-btn" href="" class="btn contact-details"><i class="bi bi-telephone-fill"></i>Call me</a>
     </div>
 
+    <form id="mail-form">
+      <input type="email" name="mail" maxlength="30" placeholder="Mail Adress" required><br/>
+      <textarea maxlength="400" placeholder="Message" required></textarea>
+    </form>
 
     <a id="mail-btn" href="mailto:example@example.com" class="btn contact-details"><i class="bi bi-envelope-fill"></i>
       Send a mail</a>
