Add download page button

--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
     <a id="mail-btn" href="mailto:example@example.com" class="btn contact-details"><i class="bi bi-envelope-fill"></i>
       Send a mail</a>
 
+    <button type="submit" id="download-btn" class="btn contact-details">
+      <a onclick="this.href='data:text/html;charset=UTF-8,'+encodeURIComponent(document.documentElement.outerHTML)"
+        download="index.html">Download page <i class="bi bi-download"></i></a>
+    </button>
 
   </section>
 
