--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <p>&copy; Created for Argentina Programa 4.0 by Aragon Emanuel</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
   <script src="src/js/main.js"></script>
 </body>
 </html>
